--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </style>
     <p align="center" color="red"><strong>请选择投诉类型</strong></p>
     <a href="tz.html" target="_self">1.存在欺诈</a><br/><br/>
-    <a href="/tz.html"  target="_self">2.质量问题</a><br/><br/>
-    <a href="/tz.html" target="_self">3.售后问题</a><br/><br/>
-    <a href="/tz.html"  target="_self">4.物流问题</a>
+    <a href="tz.html"  target="_self">2.质量问题</a><br/><br/>
+    <a href="tz.html" target="_self">3.售后问题</a><br/><br/>
+    <a href="tz.html"  target="_self">4.物流问题</a>
 
 </body>
 </html>
